--- a/Readme.md/index.html
+++ b/Readme.md/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My First Webpage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Welcome to My Webpage</h1>
+    <p>This paragraph is written in plain HTML! No PHP needed 😊</p>
 
+    <h2>My Favorite Picture</h2>
+    <img src="https://via.placeholder.com/300" alt="Sample Image" width="300">
+
+    <p>Visit my <a href="https://www.linkedin.com" target="_blank">LinkedIn Profile</a>.</p>
+
+    <button onclick="showMessage()">Click Me!</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
